--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsnd ./src/dev.ts",
+    "dev": "tsnd --clear ./src/dev.ts",
     "build": "tsc",
     "start": "node ./dist/index.js"
   },
@@ -21,6 +21,7 @@
   "dependencies": {
     "express": "4.18.2",
     "firebase-admin": "11.11.0",
+    "jsonwebtoken": "9.0.2",
     "zod": "3.22.4"
   }
 }
